--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <p>Autumn Limited Edition</p>
               <p>$125.00 x 3 <span>$375.00</span></p>
             </div>
-            <i class='bx bxs-trash-alt'></i>
+            <i id="delete" class='bx bxs-trash-alt'></i>
           </div>
           <button class="checkout-btn">Checkout</button>
         </div>
@@ -99,9 +99,9 @@
     
       <div class="buy">
         <div class="signs">
-          <p class="orange">-</p>
-          <p>0</p>
-          <p class="orange">+</p>
+          <p id="minus" class="symbols">-</p>
+          <p id="quantity">0</p>
+          <p id="plus" class="symbols">+</p>
         </div>
       
         <div class="btn">
